[tool.poetry]
name = "bokehgraph"
version = "0.6.0"
description = "Interactive Graph visualization for networkX Graphs"
authors = ["Lukas Erhard <luerhard@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luerhard/bokehgraph"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bokeh = ">=2.4.1,<4.0"
numpy = [{version = ">=1.7", python = "<=3.12"}, {version = ">=1.26", python = ">=3.12"}]
networkx = ">=2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ipykernel = "^6.26.0"
selenium = "^4.15.2"
pillow = "^10.1.0"
pytest-regressions = "2.5.0"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
