[project]
name = "bokehgraph"
version = "0.6.4a0"
description = "Interactive Graph visualization for networkX Graphs"
authors = [{ name = "Lukas Erhard", email = "luerhard@googlemail.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "bokeh>=2.4.1,<4.0",
    "numpy>=1.7 ; python_version <= '3.12'",
    "numpy>=1.26 ; python_version >= '3.12'",
    "networkx>=2",
]

[project.urls]
Homepage = "https://github.com/luerhard/bokehgraph"

[dependency-groups]
dev = [
    "pytest~=7.4",
    "ipykernel>=6.26.0,<7",
    "selenium>=4.15.2,<5",
    "pillow>=10.1.0,<11",
    "pytest-regressions==2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
