[project]
name = "bokehgraph"
version = "1.1.0"
description = "Interactive Graph visualization for networkX Graphs"
authors = [{ name = "Lukas Erhard", email = "luerhard@googlemail.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "bokeh>=3.4.2,<4.0",
    "numpy>=1.7 ; python_version <= '3.12'",
    "numpy>=1.26 ; python_version >= '3.12'",
    "networkx>=3",
]

[project.urls]
Homepage = "https://github.com/luerhard/bokehgraph"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ipykernel>=6.26.0,<7",
    "selenium>=4.15.2,<5",
    "pillow>=10.1.0,<11",
    "pytest-regressions~=2.7",
]
docs = [
    "myst-parser>=3.0.1",
    "nbsphinx>=0.9.7",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
unsafe-fixes = true
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
target-version = "py312"
line-length = 100

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
